Fix collapsible but active items starting collapsed

--- a/forge_theme/css/docs.css
+++ b/forge_theme/css/docs.css
@@ -25,5 +25,3 @@ section.sidebar-nav > ul .table-of-contents .toc-item, section.sidebar-nav > ul 
 .float-right { float: right; }
 
 .float-left { float: left; }
-
-.collapsible-icon { font-size: 0.8rem !important; margin-right: 0.25rem; }
